[package]
name = "mioco"
version = "0.6.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Scalable, asynchronous IO coroutine-based handling (aka MIO COroutines)."
keywords = ["mio", "asynchronous", "coroutine", "async", "fiber"]
license = "MPL-2.0"
documentation = "https://dpc.github.io/mioco/"
homepage = "https://github.com/dpc/mioco"
repository = "https://github.com/dpc/mioco"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false
lto = true
debug-assertions = false

[lib]
name = "mioco"
path = "lib.rs"

[features]
default=[]

[dependencies]
nix = "0.5.0"
log = "0.3.5"
spin = { version = "0.4.2", default-features=false }
mio = "0.5.1"
num_cpus = "0.2.0"
libc = "0.2.10"
thread-scoped = "1.0.0"
context = "1.0.0"
slab = "0.2.0"
clippy = {version = "0.0.71", optional = true}
owning_ref = "0.1.4"

[dev-dependencies]
env_logger = "0.3.2"
httparse = "1.1.1"
net2 = "0.2.23"
rand = "0.3.14"
